--- a/index.html
+++ b/index.html
@@ -39,9 +39,118 @@
         /* NEW: Modal Styles */
         .modal-backdrop { background-color: rgba(0, 0, 0, 0.7); }
         .modal-content { max-height: 80vh; }
-    </style>
+    
+        /* Theme Variables */
+        :root {
+            --bg-primary: #1f2937;
+            --bg-secondary: #111827;
+            --bg-tertiary: #374151;
+            --text-primary: #f9fafb;
+            --text-secondary: #d1d5db;
+            --text-tertiary: #9ca3af;
+            --border-color: #4b5563;
+            --accent-color: #3b82f6;
+            --accent-hover: #2563eb;
+            --success-color: #10b981;
+            --error-color: #ef4444;
+            --scrollbar-track: #374151;
+            --scrollbar-thumb: #4a5568;
+            --scrollbar-thumb-hover: #718096;
+        }
+
+        [data-theme="light"] {
+            --bg-primary: #f3f4f6;
+            --bg-secondary: #ffffff;
+            --bg-tertiary: #e5e7eb;
+            --text-primary: #111827;
+            --text-secondary: #374151;
+            --text-tertiary: #6b7280;
+            --border-color: #d1d5db;
+            --accent-color: #3b82f6;
+            --accent-hover: #2563eb;
+            --success-color: #059669;
+            --error-color: #dc2626;
+            --scrollbar-track: #e5e7eb;
+            --scrollbar-thumb: #9ca3af;
+            --scrollbar-thumb-hover: #6b7280;
+        }
+
+        body {
+            background-color: var(--bg-primary);
+            color: var(--text-primary);
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        /* Update scrollbar colors to use theme variables */
+        .scrollbar-thin { 
+            scrollbar-width: thin; 
+            scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track); 
+        }
+        .scrollbar-thin::-webkit-scrollbar { width: 8px; }
+        .scrollbar-thin::-webkit-scrollbar-track { 
+            background: var(--scrollbar-track); 
+            border-radius: 4px; 
+        }
+        .scrollbar-thin::-webkit-scrollbar-thumb { 
+            background-color: var(--scrollbar-thumb); 
+            border-radius: 4px; 
+            border: 2px solid var(--scrollbar-track); 
+        }
+        .scrollbar-thin::-webkit-scrollbar-thumb:hover { 
+            background-color: var(--scrollbar-thumb-hover); 
+        }
+
+        /* Theme toggle button */
+        .theme-toggle {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            z-index: 1000;
+            background-color: var(--bg-tertiary);
+            border: 1px solid var(--border-color);
+            color: var(--text-primary);
+            padding: 0.5rem;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 2.5rem;
+            height: 2.5rem;
+        }
+
+        .theme-toggle:hover {
+            background-color: var(--accent-color);
+            transform: scale(1.05);
+        }
+
+        /* Update dark mode classes to use theme variables */
+        .bg-gray-900 { background-color: var(--bg-secondary) !important; }
+        .bg-gray-800 { background-color: var(--bg-primary) !important; }
+        .bg-gray-700 { background-color: var(--bg-tertiary) !important; }
+        .text-white { color: var(--text-primary) !important; }
+        .text-gray-300 { color: var(--text-secondary) !important; }
+        .text-gray-400 { color: var(--text-tertiary) !important; }
+        .border-gray-600 { border-color: var(--border-color) !important; }
+</style>
 </head>
 <body class="min-h-screen bg-gray-900 flex flex-col items-center pt-6 px-4 text-gray-200 font-sans">
+    <!-- Theme Toggle Button -->
+    <button id="themeToggle" class="theme-toggle" title="Toggle Theme" aria-label="Toggle Theme">
+        <svg id="sunIcon" class="w-5 h-5 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                  d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
+            </path>
+        </svg>
+        <svg id="moonIcon" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                  d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z">
+            </path>
+        </svg>
+    </button>
+
+
 
 <!-- Main Container -->
 <div id="mainContainer" class="w-full max-w-lg bg-gray-800 rounded-lg shadow-xl p-6 mb-6 transition-colors duration-200">
@@ -252,7 +361,41 @@ document.addEventListener('DOMContentLoaded', () => {
     loadJSZipIfNeeded().catch(err => console.warn("Preloading JSZip failed:", err.message));
 });
 
-function initEventListeners() {
+
+        // ========================================
+        // Theme Management
+        // ========================================
+        function initTheme() {
+            const savedTheme = localStorage.getItem('theme') || 'dark';
+            document.documentElement.setAttribute('data-theme', savedTheme);
+            updateThemeIcon(savedTheme);
+        }
+
+        function toggleTheme() {
+            const currentTheme = document.documentElement.getAttribute('data-theme') || 'dark';
+            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+            document.documentElement.setAttribute('data-theme', newTheme);
+            localStorage.setItem('theme', newTheme);
+            updateThemeIcon(newTheme);
+        }
+
+        function updateThemeIcon(theme) {
+            const sunIcon = document.getElementById('sunIcon');
+            const moonIcon = document.getElementById('moonIcon');
+            if (theme === 'light') {
+                sunIcon.classList.add('hidden');
+                moonIcon.classList.remove('hidden');
+            } else {
+                sunIcon.classList.remove('hidden');
+                moonIcon.classList.add('hidden');
+            }
+        }
+
+
+        function initEventListeners() {
+        // Theme toggle
+        document.getElementById('themeToggle').addEventListener('click', toggleTheme);
+
     dom.modeCombineButton.addEventListener('click', () => setMode('combine'));
     dom.modeSplitButton.addEventListener('click', () => setMode('split'));
     dom.clearAllButton.addEventListener('click', clearAllFiles);
