--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             background-color: var(--bg-primary);
             color: var(--text-primary);
             transition: background-color 0.3s, color 0.3s;
+            overflow-x: hidden;
         }
 
-        /* Update scrollbar colors to use theme variables */
         .scrollbar-thin { 
             scrollbar-width: thin; 
             scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track); 
@@ -100,7 +100,6 @@
             background-color: var(--scrollbar-thumb-hover); 
         }
 
-        /* Theme toggle button */
         .theme-toggle {
             position: fixed;
             top: 1rem;
@@ -125,7 +124,6 @@
             transform: scale(1.05);
         }
 
-        /* Update dark mode classes to use theme variables */
         .bg-gray-900 { background-color: var(--bg-secondary) !important; }
         .bg-gray-800 { background-color: var(--bg-primary) !important; }
         .bg-gray-700 { background-color: var(--bg-tertiary) !important; }
@@ -133,6 +131,165 @@
         .text-gray-300 { color: var(--text-secondary) !important; }
         .text-gray-400 { color: var(--text-tertiary) !important; }
         .border-gray-600 { border-color: var(--border-color) !important; }
+
+        /* Mobile-First Responsive Design */
+        .container {
+            padding: 0.75rem;
+            max-width: 100%;
+        }
+
+        h1 {
+            font-size: 1.5rem;
+            line-height: 2rem;
+        }
+
+        h2 {
+            font-size: 1.25rem;
+            line-height: 1.75rem;
+        }
+
+        button, .btn {
+            min-height: 44px;
+            padding: 0.625rem 1rem;
+            font-size: 0.875rem;
+        }
+
+        input, select, textarea {
+            min-height: 44px;
+            font-size: 16px;
+        }
+
+        .file-item {
+            padding: 0.75rem;
+            margin-bottom: 0.5rem;
+        }
+
+        textarea {
+            min-height: 200px;
+        }
+
+        @media (min-width: 640px) {
+            .container {
+                padding: 1.5rem;
+            }
+
+            h1 {
+                font-size: 2rem;
+                line-height: 2.5rem;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+                line-height: 2rem;
+            }
+
+            button, .btn {
+                font-size: 1rem;
+            }
+
+            textarea {
+                min-height: 300px;
+            }
+        }
+
+        @media (min-width: 768px) {
+            .container {
+                padding: 2rem;
+            }
+
+            h1 {
+                font-size: 2.25rem;
+                line-height: 2.75rem;
+            }
+        }
+
+        @media (min-width: 1024px) {
+            .container {
+                max-width: 1024px;
+                margin: 0 auto;
+            }
+        }
+
+        @media (min-width: 1280px) {
+            .container {
+                max-width: 1280px;
+            }
+        }
+
+        @media (max-width: 639px) {
+            .theme-toggle {
+                top: 0.5rem;
+                right: 0.5rem;
+                width: 2.25rem;
+                height: 2.25rem;
+            }
+
+            .button-group {
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+
+            .button-group button {
+                width: 100%;
+            }
+
+            .modal-content {
+                width: 95vw !important;
+                max-height: 90vh;
+                margin: 5vh 2.5vw;
+            }
+
+            .file-list-container {
+                max-height: 40vh;
+            }
+
+            table {
+                font-size: 0.875rem;
+            }
+
+            .config-item {
+                margin-bottom: 1rem;
+            }
+
+            body.is-mobile {
+                padding-top: 3.5rem;
+            }
+        }
+
+        @media (max-width: 768px) and (orientation: landscape) {
+            .file-list-container {
+                max-height: 30vh;
+            }
+
+            .modal-content {
+                max-height: 85vh;
+            }
+        }
+
+        @media (hover: none) and (pointer: coarse) {
+            a, button, input, select, textarea {
+                min-height: 44px;
+                min-width: 44px;
+            }
+
+            button:hover {
+                transform: none;
+            }
+
+            .modal-close {
+                padding: 1rem;
+            }
+        }
+
+        .mobile-vh-100 {
+            height: 100vh;
+            height: calc(var(--vh, 1vh) * 100);
+        }
+
+        .modal {
+            max-height: 100vh;
+            max-height: calc(var(--vh, 1vh) * 100);
+        }
 </style>
 </head>
 <body class="min-h-screen bg-gray-900 flex flex-col items-center pt-6 px-4 text-gray-200 font-sans">
@@ -153,8 +310,8 @@
 
 
 <!-- Main Container -->
-<div id="mainContainer" class="w-full max-w-lg bg-gray-800 rounded-lg shadow-xl p-6 mb-6 transition-colors duration-200">
-    <h1 class="text-2xl font-semibold text-center text-white mb-4">File Combiner & Splitter Pro</h1>
+<div id="mainContainer" class="w-full max-w-lg bg-gray-800 rounded-lg shadow-xl p-3 sm:p-6 mb-4 sm:mb-6 transition-colors duration-200">
+    <h1 class="text-xl sm:text-2xl font-semibold text-center text-white mb-4">File Combiner & Splitter Pro</h1>
 
     <!-- Mode Switcher -->
     <div class="flex justify-center mb-5 border border-gray-600 rounded-md p-1 bg-gray-800">
@@ -273,7 +430,7 @@ dist/"></textarea>
 <!-- NEW: Statistics Modal -->
 <div id="statsModal" class="fixed inset-0 z-50 flex items-center justify-center p-4 hidden">
     <div id="statsModalBackdrop" class="modal-backdrop fixed inset-0"></div>
-    <div class="modal-content relative w-full max-w-2xl bg-gray-800 rounded-lg shadow-xl p-6 text-gray-200 overflow-y-auto scrollbar-thin">
+    <div class="modal-content relative w-full max-w-2xl bg-gray-800 rounded-lg shadow-xl p-3 sm:p-6 text-gray-200 overflow-y-auto scrollbar-thin">
         <div class="flex justify-between items-center mb-4">
             <h2 class="text-xl font-semibold">Content Statistics</h2>
             <button id="closeStatsModal" class="text-gray-400 hover:text-white">×</button>
@@ -391,9 +548,60 @@ document.addEventListener('DOMContentLoaded', () => {
             }
         }
 
+        // ========================================
+        // Mobile-First Utilities
+        // ========================================
+        function isMobileDevice() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        }
+
+        function isTouchDevice() {
+            return ('ontouchstart' in window) || (navigator.maxTouchPoints > 0);
+        }
+
+        function setMobileVH() {
+            const vh = window.innerHeight * 0.01;
+            document.documentElement.style.setProperty('--vh', `${vh}px`);
+        }
+
+        function optimizeScrolling() {
+            const scrollableElements = document.querySelectorAll('.scrollbar-thin');
+            scrollableElements.forEach(el => {
+                el.style.webkitOverflowScrolling = 'touch';
+            });
+        }
+
+        function preventZoomOnFocus() {
+            if (isMobileDevice()) {
+                const inputs = document.querySelectorAll('input[type="text"], textarea, select');
+                inputs.forEach(input => {
+                    if (input.style.fontSize !== '16px') {
+                        input.style.fontSize = '16px';
+                    }
+                });
+            }
+        }
+
+        function handleOrientationChange() {
+            setMobileVH();
+            window.dispatchEvent(new Event('resize'));
+        }
+
+        function initMobileOptimizations() {
+            if (isMobileDevice() || isTouchDevice()) {
+                setMobileVH();
+                optimizeScrolling();
+                preventZoomOnFocus();
+
+                window.addEventListener('resize', setMobileVH);
+                window.addEventListener('orientationchange', handleOrientationChange);
+
+                document.body.classList.add('is-mobile');
+            }
+        }
+
 
         function initEventListeners() {
-        // Theme toggle
         document.getElementById('themeToggle').addEventListener('click', toggleTheme);
 
     dom.modeCombineButton.addEventListener('click', () => setMode('combine'));
@@ -895,11 +1103,11 @@ function showStatsModal() {
     let html = `
         <div class="bg-gray-700 p-4 rounded-lg">
             <h3 class="font-semibold text-lg mb-2">Overall Totals</h3>
-            <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 text-center">
-                <div><div class="text-2xl font-bold">${totals.files.toLocaleString()}</div><div class="text-xs text-gray-400">Files</div></div>
-                <div><div class="text-2xl font-bold">${formatBytes(totals.size)}</div><div class="text-xs text-gray-400">Size</div></div>
-                <div><div class="text-2xl font-bold">${totals.lines.toLocaleString()}</div><div class="text-xs text-gray-400">Lines</div></div>
-                <div><div class="text-2xl font-bold">${totals.chars.toLocaleString()}</div><div class="text-xs text-gray-400">Characters</div></div>
+            <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 sm:gap-4 text-center">
+                <div><div class="text-xl sm:text-2xl font-bold">${totals.files.toLocaleString()}</div><div class="text-xs text-gray-400">Files</div></div>
+                <div><div class="text-xl sm:text-2xl font-bold">${formatBytes(totals.size)}</div><div class="text-xs text-gray-400">Size</div></div>
+                <div><div class="text-xl sm:text-2xl font-bold">${totals.lines.toLocaleString()}</div><div class="text-xs text-gray-400">Lines</div></div>
+                <div><div class="text-xl sm:text-2xl font-bold">${totals.chars.toLocaleString()}</div><div class="text-xs text-gray-400">Characters</div></div>
             </div>
         </div>
         <div>
